[package]
name = "high-load-2-rst"
version = "0.1.0"
authors = ["Данильченко Максим <m.danilchenko@atol.ru>"]
edition = "2018"

[dependencies]
actix = "0.7"
actix-web = "0.7"

futures = "0.1"
env_logger = "0.5"
bytes = "0.4"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
json = "*"

validator = "0.6.3"
validator_derive = "0.6.5"

zip = "0.2.6"

itertools = "0.8"

sys-info = "0.5.6"

chrono = "0.4"

fnv = "1.0.3"
indexmap = "1.0.2"
